--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <body>
+  <body
+    class="text-foreground !overflow-visible light-background dark:backdrop-blur-xs transition-all"
+  >
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
