--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <body
-    class="text-foreground !overflow-visible light-background dark:backdrop-blur-xs transition-all"
-  >
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
